--- a/requirements.txt
+++ b/requirements.txt
@@ -1,258 +1,258 @@
-altgraph==0.17.3
-annotated-types==0.5.0
-ansi2html==1.8.0
-anyascii==0.3.1
-anyio==3.6.2
-arrow==1.2.3
-asttokens==2.2.1
-atomicwrites==1.4.1
-autocorrect==2.2.2
-backcall==0.2.0
-beautifulsoup4==4.12.0
-bleach==6.0.0
-blis==0.4.1
-bokeh==2.4.3
-boto3==1.16.28
-botocore==1.19.28
-bottle==0.12.17
-brotlipy==0.7.0
-cachetools==5.2.0
-catalogue==1.0.0
-chardet==3.0.4
-chart-studio==1.1.0
-click==8.1.3
-cloudpickle==3.0.0
-colorama==0.4.5
-comm==0.1.4
-concurrent-log-handler==0.9.20
-contractions==0.0.25
-coverage==7.2.7
-cx-Oracle==8.3.0
-cycler==0.11.0
-cymem==2.0.6
-dash==2.9.1
-dash-bootstrap-components==1.4.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dask==2023.5.0
-debugpy==1.6.6
-decorator==5.1.1
-deep-translator==1.11.4
-defusedxml==0.7.1
-distro==1.9.0
-docker==5.0.3
-docx2txt==0.8
-EasyNMT==2.0.2
-elevenlabs==0.2.18
-english==2020.7.0
-et-xmlfile==1.1.0
-executing==0.8.3
-Faker==30.8.2
-fastapi==0.115.4
-fastjsonschema==2.16.3
-fasttext==0.9.2
-feather-format==0.4.1
-filelock==3.12.1
-Flask==2.2.3
-Flask-Cors==3.0.10
-fonttools==4.34.4
-fqdn==1.5.1
-fsspec==2023.6.0
-future==0.18.2
-fuzzywuzzy==0.18.0
-gensim==3.8.3
-google-api-core==2.11.1
-google-api-python-client==2.53.0
-google-auth==2.22.0
-google-auth-httplib2==0.1.0
-google-cloud-core==2.3.3
-google-cloud-translate==3.11.2
-google-trans-new==1.1.9
-googleapis-common-protos==1.56.4
-googletrans==4.0.0rc1
-googletrans-temp==2.3.0
-grpcio==1.56.0
-grpcio-status==1.56.0
-h11==0.14.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2023.1.1
-httpcore==1.0.5
-httplib2==0.20.4
-httpx==0.27.0
-huggingface-hub==0.16.4
-hyperframe==5.2.0
-idna==2.10
-importlib-metadata==6.1.0
-importlib-resources==5.12.0
-inexactsearch==1.0.2
-ipykernel==6.22.0
-ipython==8.11.0
-ipython-genutils==0.2.0
-ipywidgets==7.8.1
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.0.3
-jmespath==0.10.0
-joblib==1.4.2
-jsonpath-ng==1.6.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-dash==0.4.2
-jupyter-events==0.6.3
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.7
-kiwisolver==1.4.4
-libretranslatepy==2.1.1
-locket==1.0.0
-logger-tt==1.7.0
-loguru==0.5.3
-lxml==4.9.2
-MarkupSafe==2.1.2
-matplotlib==3.5.2
-matplotlib-inline==0.1.6
-Metaphone==0.6
-mistune==2.0.5
-monotonic==1.6
-more-itertools==10.0.0
-mpmath==1.3.0
-multiprocessing-logging==0.3.3
-national-id==1.0.3
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.10
-nbformat==5.8.0
-neotime==1.7.4
-nest-asyncio==1.5.6
-networkx==3.1
-nltk==3.8.1
-notebook==6.5.3
-notebook_shim==0.2.2
-npm==0.1.1
-openai==0.28.0
-opencv-python==4.8.1.78
-openpyxl==3.1.2
-optional-django==0.1.0
-packaging==21.3
-pandas==1.5.3
-pandocfilters==1.5.0
-pansi==2020.7.3
-parso==0.8.3
-partd==1.4.1
-pefile==2023.2.7
-pickleshare==0.7.5
-Pillow==9.2.0
-pkgutil_resolve_name==1.3.10
-plac==1.1.3
-platformdirs==3.1.1
-plotly==5.9.0
-pluggy==0.13.1
-ply==3.11
-portalocker==2.5.1
-probableparsing==0.0.1
-prometheus-client==0.16.0
-prompt-toolkit==3.0.30
-proto-plus==1.22.3
-protobuf==4.23.4
-psutil==5.8.0
-psycopg2==2.8.5
-pure-eval==0.2.2
-py==1.11.0
-py-cpuinfo==9.0.0
-pyahocorasick==1.4.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybind11==2.11.0
-pycryptodome==3.18.0
-pydantic==1.10.13
-pydantic_core==2.1.2
-pydot==1.4.2
-Pygments==2.12.0
-pygoogletranslation==2.0.6
-pyinstaller-hooks-contrib==2023.0
-pyodbc==4.0.34
-pyparsing==3.0.9
-PyPDF2==3.0.1
-pyrsistent==0.19.3
-pyspellchecker==0.5.5
-pytest==5.4.3
-pytest-cov==2.10.1
-python-crfsuite==0.9.8
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-python-Levenshtein==0.12.2
-python-stdnum==1.19
-pytz==2022.1
-pywin32-ctypes==0.2.0
-pyzmq==25.0.2
-qtconsole==5.4.1
-QtPy==2.3.0
-rake-nltk==1.0.6
-rapidfuzz==2.15.2
-regex==2021.11.10
-requests==2.23.0
-retrying==1.3.3
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rsa==4.8
-seaborn==0.11.2
-Send2Trash==1.8.0
-sentencepiece==0.1.96
-silpa-common==0.3
-six==1.16.0
-smart-open==6.0.0
-sniffio==1.3.0
-soundex==1.1.3
-soupsieve==2.4
-spellchecker==0.4
-SQLAlchemy==1.3.24
-srsly==1.0.5
-stack-data==0.5.1
-stanza==1.1.1
-starlette==0.41.2
-sympy==1.12
-tenacity==8.0.1
-terminado==0.17.1
-textdistance==4.4.0
-textsearch==0.0.21
-thinc==7.4.1
-thop==0.1.1.post2209072238
-threadpoolctl==3.5.0
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.9.0
-transformers==4.30.2
-translate==3.6.1
-typing==3.7.4.3
-typing_extensions==4.12.2
-tzdata==2023.3
-ultralytics==8.0.212
-Unidecode==1.3.6
-uri-template==1.2.0
-uritemplate==4.1.1
-urllib3==1.25.11
-usaddress==0.5.10
-uvicorn==0.32.0
-vaderSentiment==3.3.2
-varname==0.8.3
-waitress==2.1.2
-wasabi==0.9.1
-wcwidth==0.2.5
-webcolors==1.12
-webencodings==0.5.1
-WebOb==1.8.7
-websocket-client==1.3.3
-WebTest==2.0.35
-Werkzeug==2.2.3
-widgetsnbextension==3.6.6
-win32-setctime==1.1.0
-wincertstore==0.2
+altgraph
+annotated-types
+ansi2html
+anyascii
+anyio
+arrow
+asttokens
+atomicwrites
+autocorrect
+backcall
+beautifulsoup4
+bleach
+blis
+bokeh
+boto3
+botocore
+bottle
+brotlipy
+cachetools
+catalogue
+chardet
+chart-studio
+click
+cloudpickle
+colorama
+comm
+concurrent-log-handler
+contractions
+coverage
+cx-Oracle
+cycler
+cymem
+dash
+dash-bootstrap-components
+dash-core-components
+dash-html-components
+dash-table
+dask
+debugpy
+decorator
+deep-translator
+defusedxml
+distro
+docker
+docx2txt
+EasyNMT
+elevenlabs
+English
+et-xmlfile
+executing
+Faker
+fastapi
+fastjsonschema
+fasttext
+feather-format
+filelock
+Flask
+Flask-Cors
+fonttools
+fqdn
+fsspec
+future
+fuzzywuzzy
+genism
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-cloud-core
+google-cloud-translate
+google-trans-new
+googleapis-common-protos
+googletrans
+googletrans-temp
+grpcio
+grpcio-status
+h11
+h2
+hpack
+hstspreload
+httpcore
+httplib2
+httpx
+huggingface-hub
+hyperframe
+idna
+importlib-metadata
+importlib-resources
+inexactsearch
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+isoduration
+itsdangerous
+jedi
+Jinja2
+jmespath
+joblib
+jsonpath-ng
+jsonpointer
+jsonschema
+jupyter
+jupyter-console
+jupyter-dash
+jupyter-events
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab-pygments
+jupyterlab-widgets
+kiwisolver
+libretranslatepy
+locket
+logger-tt
+loguru
+lxml
+MarkupSafe
+matplotlib
+matplotlib-inline
+Metaphone
+mistune
+monotonic
+more-itertools
+mpmath
+multiprocessing-logging
+national-id
+nbclassic
+nbclient
+nbconvert
+nbformat
+neotime
+nest-asyncio
+networkx
+nltk
+notebook
+notebook_shim
+npm
+openai
+opencv-python
+openpyxl
+optional-Django
+packaging
+pandas
+pandocfilters
+pansi
+parso
+partd
+pefile
+pickleshare
+Pillow
+pkgutil_resolve_name
+plac
+platformdirs
+plotly
+pluggy
+ply
+portalocker
+probableparsing
+prometheus-client
+prompt-toolkit
+proto-plus
+protobuf
+psutil
+psycopg2
+pure-eval
+py
+py-cpuinfo
+pyahocorasick
+pyasn1
+pyasn1-modules
+pybind11
+pycryptodome
+pydantic
+pydantic_core
+pydot
+Pygments
+pygoogletranslation
+pyinstaller-hooks-contrib
+pyodbc
+pyparsing
+PyPDF2
+pyrsistent
+pyspellchecker
+pytest
+pytest-cov
+python-crfsuite
+python-dateutil
+python-json-logger
+python-Levenshtein
+python-stdnum
+pytz
+pywin32-ctypes
+pyzmq
+qtconsole
+QtPy
+rake-nltk
+rapidfuzz
+regex
+requests
+retrying
+rfc3339-validator
+rfc3986
+rfc3986-validator
+rsa
+seaborn
+Send2Trash
+sentencepiece
+silpa-common
+six
+smart-open
+sniffio
+soundex
+soupsieve
+spellchecker
+SQLAlchemy
+srsly
+stack-data
+stanza
+starlette
+sympy
+tenacity
+terminado
+textdistance
+textsearch
+thinc
+thop
+threadpoolctl
+tornado
+tqdm
+traitlets
+transformers
+translate
+typing
+typing_extensions
+tzdata
+ultralytics
+Unidecode
+uri-template
+uritemplate
+urllib3
+usaddress
+uvicorn
+vaderSentiment
+varname
+waitress
+wasabi
+wcwidth
+webcolors
+webencodings
+WebOb
+websocket-client
+WebTest
+Werkzeug
+widgetsnbextension
+win32-setctime
+wincertstore
